# DCL_ObjectRecognition

./: CMakeLists.txt  README.md
data/herbapol_mieta_model/: herbapol_mieta1.json  herbapol_mieta1_xyzrgb.pcd  herbapol_mieta1_xyzsift.pcd
data/model/herbapol_mieta/: herbapol_mieta.json  herbapol_mieta_cloud_xyzrgb.pcd  herbapol_mieta_cloud_xyzsift.pcd
data/model/mnich/: mnich.json  mnich_cloud_xyzrgb.pcd  mnich_cloud_xyzsift.pcd
data/model/sen/: sen.json  sen_cloud_xyzrgb.pcd  sen_cloud_xyzsift.pcd
src/: CMakeLists.txt  ObjectRecognitionConfig.cmake.in
src/Components/: CMakeLists.txt
src/Components/ConfidenceCalculator/: CMakeLists.txt  ConfidenceCalculator.cpp  ConfidenceCalculator.hpp
src/Components/ImageDarkConv/: CMakeLists.txt  ImageDarkConv.cpp  ImageDarkConv.hpp
src/Components/MatchCorrespondences/: CMakeLists.txt  MatchCorrespondences.cpp  MatchCorrespondences.hpp
src/Components/MatchesVisualization/: CMakeLists.txt  MatchesVisualization.cpp  MatchesVisualization.hpp
src/Types/: CMakeLists.txt  FeaturesWithColor.hpp
tasks/: RGBImageRecognition.xml
